force-app/main/default/objects/clariti__JournalEntryItem__c/clariti__JournalEntryItem__c.object-meta.xml
<CustomObject>
    <description>Journal Entry Item is used to record a financial transaction in the accounting records (Ledger Accounts).</description>
    <label>Journal Entry Item</label>
    <nameField>
        <displayFormat>JEI-{MM}{DD}{YYYY}-{000}</displayFormat>
        <label>Journal Entry Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Entry Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>