force-app/main/default/objects/clariti__JournalEntryItem__c/fields/clariti__CashierSession__c.field-meta.xml
<CustomField>
    <fullName>clariti__CashierSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cashier Session</label>
    <referenceTo>clariti__CashierSession__c</referenceTo>
    <relationshipLabel>Journal Entry Items</relationshipLabel>
    <relationshipName>JournalEntryItems</relationshipName>
    <type>Lookup</type>
</CustomField>