force-app/main/default/objects/clariti__JournalEntryItem__c/fields/clariti__CreditAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__CreditAmount__c</fullName>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>