force-app/main/default/objects/clariti__JournalEntryItem__c/fields/clariti__DebitAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__DebitAmount__c</fullName>
    <label>Debit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>