force-app/main/default/objects/clariti__JournalEntryItem__c/fields/clariti__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>clariti__EffectiveDate__c</fullName>
    <description>The date when the journal entry takes effect in the accounting books</description>
    <inlineHelpText>The date when the journal entry takes effect in the accounting books</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>