force-app/main/default/objects/clariti__JournalEntryItem__c/fields/clariti__LedgerAccount__c.field-meta.xml
<CustomField>
    <fullName>clariti__LedgerAccount__c</fullName>
    <description>Lookup to the Ledger Account on which this Journal Entry Item is recorded</description>
    <inlineHelpText>Lookup to the Ledger Account on which this Journal Entry Item is recorded</inlineHelpText>
    <label>Ledger Account</label>
    <referenceTo>clariti__LedgerAccount__c</referenceTo>
    <relationshipLabel>Journal Entry Items</relationshipLabel>
    <relationshipName>JournalEntryItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>