force-app/main/default/objects/clariti__JournalEntryItem__c/fields/clariti__PaymentAllocation__c.field-meta.xml
<CustomField>
    <fullName>clariti__PaymentAllocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Allocation</label>
    <referenceTo>clariti__PaymentAllocation__c</referenceTo>
    <relationshipLabel>Journal Entry Items</relationshipLabel>
    <relationshipName>JournalEntryItems</relationshipName>
    <type>Lookup</type>
</CustomField>