force-app/main/default/objects/clariti__JournalEntryItem__c/fields/clariti__TransactionDescription__c.field-meta.xml
<CustomField>
    <fullName>clariti__TransactionDescription__c</fullName>
    <description>Transaction reference information defined in the ledger treatment</description>
    <inlineHelpText>Transaction reference information defined in the ledger treatment</inlineHelpText>
    <label>Transaction Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>