force-app/main/default/objects/clariti__JournalEntryItem__c/validationRules/clariti__CannotRelateClosedOrInactiveFiscalPeriod.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__CannotRelateClosedOrInactiveFiscalPeriod</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        $CustomMetadata.clariti__FinancialsFeatureEnablementSettings__mdt.clariti__FiscalYearAndPeriodManagement.clariti__Enable__c,
ISCHANGED(clariti__FiscalPeriod__c),
NOT(OR(
ISPICKVAL( clariti__FiscalPeriod__r.clariti__Status__c,&apos;Open&apos; ),
ISPICKVAL( clariti__FiscalPeriod__r.clariti__Status__c,&apos;Active&apos;)
))
)</errorConditionFormula>
    <errorDisplayField>clariti__FiscalPeriod__c</errorDisplayField>
    <errorMessage>You can not relate a Journal Entry with a Fiscal Period that is Closed or Inactive.</errorMessage>
</ValidationRule>