force-app/main/default/objects/clariti__JournalEntryItem__c/validationRules/clariti__EffectiveDateIsNotInFiscalPeriodRange.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__EffectiveDateIsNotInFiscalPeriodRange</fullName>
    <active>true</active>
    <errorConditionFormula>$CustomMetadata.clariti__FinancialsFeatureEnablementSettings__mdt.clariti__FiscalYearAndPeriodManagement.clariti__Enable__c &amp;&amp; !ISBLANK(clariti__FiscalPeriod__c) &amp;&amp; (clariti__EffectiveDate__c &lt; clariti__FiscalPeriod__r.clariti__StartDate__c || clariti__EffectiveDate__c &gt; clariti__FiscalPeriod__r.clariti__EndDate__c)</errorConditionFormula>
    <errorDisplayField>clariti__EffectiveDate__c</errorDisplayField>
    <errorMessage>The selected Effective Date is outside of the related Fiscal Period date range.</errorMessage>
</ValidationRule>