force-app/main/default/objects/clariti__JournalEntryItem__c/listViews/clariti__OutOfBalanceJournalEntryItems.listView-meta.xml
<ListView>
    <fullName>clariti__OutOfBalanceJournalEntryItems</fullName>
    <columns>NAME</columns>
    <columns>clariti__CreditAmount__c</columns>
    <columns>clariti__DebitAmount__c</columns>
    <columns>clariti__Account__c</columns>
    <columns>clariti__CashierSession__c</columns>
    <columns>clariti__EffectiveDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clariti__CashierSession__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Out of Balance Journal Entry Items</label>
</ListView>